--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,32 +8,34 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Briem+Hand:wght@100..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <header class="header">
+    <header class="header navbar-expand-lg navbar-light bg-dark py-3 navbar-fixed-top">
       <div class="inner">
         <div class="nav">
           <div class="nav__left">
             <%= link_to "CampShare" , root_path , class: :logo %>
           </div>
-            <% if user_signed_in? %>
-            <div class="nav__right">
-              <%= link_to "ログアウト", destroy_user_session_path, class: :nav__logout , data: { turbo_method: :delete }%>
-              <%= link_to "New Proto", "#", class: :nav__btn %>
-            </div>
-            <% else %>
-            <div class="nav__right">
-              <%= link_to "ログイン", new_user_session_path, class: :nav__btn %>
-              <%= link_to "新規登録", new_user_registration_path, class: :nav__btn %>
-            </div>
-            <% end %>
+          <% if user_signed_in? %>
+          <div class="nav__right">
+            <%= link_to "ログアウト", destroy_user_session_path, class: :nav__logout , data: { turbo_method: :delete }%>
+            <%= link_to "New Proto", "#", class: :nav__btn %>
+          </div>
+          <% else %>
+          <div class="nav__right">
+            <%= link_to "ログイン", new_user_session_path, class: :nav__btn %>
+            <%= link_to "新規登録", new_user_registration_path, class: :nav__btn %>
+          </div>
+          <% end %>
         </div>
       </div>
     </header>
     <%= yield %>
-    <footer class="footer">
+    <footer class="footer fixed-bottom">
       <p class="copyright">Copyright © CampShare All rights reserved.</p>
     </footer>
   </body>
