--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,7 +39,7 @@ a {
 /* ヘッダー */
 
 .header {
-  background-color: #f1f8fe;
+  background-color: #110F0E;
   margin-bottom: 48px;
   padding: 20px 0;
 
@@ -54,6 +54,7 @@ a {
   justify-content: space-between;
 }
 .logo {
+  color: #fff;
   font-size: 30px;
 }
 .nav__btn{
@@ -87,6 +88,7 @@ a {
 /* フォーム周り */
 .form__wrapper{
   min-height: calc(100vh - 161px);
+  width: 500px;
 }
 
 .form__text {
@@ -121,7 +123,6 @@ a {
 }
 
 /* メイン */
-
 .greeting{
   margin-bottom: 20px;
 }
@@ -133,12 +134,26 @@ a {
   margin-bottom: 28px;
 }
 .card__wrapper {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  min-height: calc(100vh - 161px);
+  min-height: calc(100vh - 100px);
 }
+
+.card-effect {
+  box-shadow: var(--box-shadow);
+  background-color: #fff;
+  padding: 25px;
+  transition: all 0.35s ease;
+}
+
+.card-effect:hover {
+  box-shadow: black;
+  transform: translateY(10px);
+}
+
 .card {
   width: calc((100% - 50px) / 3);
   margin-bottom: 40px;
@@ -271,13 +286,14 @@ a {
 /* フッター */
 
 .footer {
+  height: 50px;
   background-color: #999;
   padding: 10px 0;
 }
 .copyright {
   text-align: center;
   color: #fff;
-  font-size: 10px;
+  font-size: 15px;
 }
 
 /* タブレット対応 */
