--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,34 +2,30 @@
   <div class="inner">
     <div class="form__wrapper">
       <h2 class="page-heading">ユーザー新規登録</h2>
-
-        <%# 「モデル名」にはUserモデルであれば@userを渡しましょう。%>
-        <%# 「新規登録機能へのパス」は、devise導入後にrails routesを実行してdevise/registrations#createへのパスを確認し、記載してください。 %>
         <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
 
         <div class="field">
-          <%= f.label :email, "メールアドレス" %><br />
-          <%= f.email_field :email, id:"user_email", autofocus: true, autocomplete: "email" %>
+          <%= f.label :email, "メールアドレス" , class: "form-label" %><br />
+          <%= f.email_field :email, class: 'form-control', id:"user_email", placeholder: "name@example.com", autofocus: true, autocomplete: "email" %>
         </div>
 
         <div class="field">
-          <%= f.label :password, "パスワード（6文字以上）" %><br />
-          <%= f.password_field :password, id:"user_password", autocomplete: "new-password" %>
+          <%= f.label :password, "パスワード（6文字以上）", class: "form-label" %><br />
+          <%= f.password_field :password, class: 'form-control', id:"user_password", placeholder: "Password",autocomplete: "new-password" %>
         </div>
 
         <div class="field">
-          <%= f.label :password_confirmation, "パスワード再入力" %><br />
-          <%= f.password_field :password_confirmation, id:"user_password_confirmation", autocomplete: "new-password" %>
+          <%= f.label :password_confirmation, "パスワード再入力", class: "form-label" %><br />
+          <%= f.password_field :password_confirmation, class: 'form-control',id:"user_password_confirmation", placeholder: "Password Confirmation", autocomplete: "new-password" %>
         </div>
 
         <div class="field">
-          <%= f.label :name, "ユーザー名" %><br />
-          <%= f.text_field :name, id:"user_name" %>
+          <%= f.label :name, "ユーザー名", class: "form-label" %><br />
+          <%= f.text_field :name, class: 'form-control', id:"user_name", placeholder: "Name"%>
         </div>
-
         <div class="field">
-          <%= f.label :profile, "自己紹介" %><br />
-          <%= f.text_area :profile, class: :form__text, id:"user_profile" %>
+          <%= f.label :profile, "自己紹介", class: "form-label" %><br />
+          <%= f.text_area :profile, class: 'form-control', rows: 10, id:"user_profile", placeholder: "はじめまして！キャンプ太郎です。キャンプ歴5年のソロキャンパーです。富士山麓のキャンプ場で焚き火や料理、DIYを楽しんでいます。このブログでは、キャンプの魅力を多くの人に伝えたいと思っています。" %>
         </div>
 
         <div class="actions">
