--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,8 +1,10 @@
-<div class="main">
-  <div class="inner">
-    <div class="form__wrapper">
-      <h2 class="page-heading">プロトタイプ編集</h2>
-      <%# 部分テンプレートでフォームを表示する %>
-    </div>
-  </div>
+<h1>Editing blog</h1>
+
+<%= render "form", blog: @blog %>
+
+<br>
+
+<div>
+  <%= link_to "Show this blog", @blog %> |
+  <%= link_to "Back to blogs", blogs_path %>
 </div>
