Add comments model and resources, update blogs and users resources, modify views for blogs and users, update routes, and add Bootstrap Icons to application layout
* Added a new model `Comment` with associations in `blog.rb`

--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -29,3 +29,9 @@
   padding: 0 !important;
   max-width: 100% !important;
 }
+
+trix-editor {
+  min-height: 20em;
+  max-height: 20em;
+  overflow-y: auto;
+}
