Add price\_2 and price\_3 columns to gears table; update schema and migration files
This commit adds two new columns, price\_2 and price\_3, to the gears table in the database.

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -13,63 +13,63 @@
 <%# if Gear.count == 0 %>
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-lg-4">
       <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Gear Name</h5>
+        <p class="card-text">Some quick example text to build on the Gear Name and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary mt-3">Detail</a>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4">
       <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="./app/assets/images/blog1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Gear Name</h5>
+        <p class="card-text">Some quick example text to build on the Gear Name and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary mt-3">Detail</a>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4">
       <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Gear Name</h5>
+        <p class="card-text">Some quick example text to build on the Gear Name and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary mt-3">Detail</a>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4">
       <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Gear Name</h5>
+        <p class="card-text">Some quick example text to build on the Gear Name and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary mt-3">Detail</a>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4">
       <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Gear Name</h5>
+        <p class="card-text">Some quick example text to build on the Gear Name and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary mt-3">Detail</a>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4">
       <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Gear Name</h5>
+        <p class="card-text">Some quick example text to build on the Gear Name and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary mt-3">Detail</a>
         </div>
       </div>
     </div>
@@ -101,11 +101,11 @@
 
 <% if Blog.count == 0 %>
 
-<div class="contaier">
+<div class="contaier mb-5">
   <div id="blogs">
-    <div class="card w-100 md">
+    <div class="card w-100 mb-5">
       <div class="card-body d-flex justify-content-between">
-        <h5 class="card-title">当ブログ「CampShare」はキャンプ・アウトドア関係の商品レビューや、キャンプで役立つ小ネタ、キャンプ飯のレシピを中心としたブログです。キャンプ体験を投稿してね！</h5>
+        <p class="card-text me-3">当ブログ「CampShare」はキャンプ・アウトドア関係の商品レビューや、キャンプで役立つ小ネタ、キャンプ飯のレシピを中心としたブログです。キャンプ体験を投稿してね！</p>
         <p class="ml-5"><%= link_to "Show", "#" ,  class: "btn btn-success mt-2"%></p>
       </div>
     </div>
